--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ bin-int/Debug-windows-x86_64/ImGui/ImGui.tlog/Lib-link.write.1.tlog
 bin-int/Debug-windows-x86_64/ImGui/ImGui.tlog/Lib.command.1.tlog
 bin/Debug-windows-x86_64/ImGui/ImGui.idb
 bin/Debug-windows-x86_64/ImGui/ImGui.lib
+bin-int/Debug-windows-x86_64/ImGui/ImGui.vcxproj.FileListAbsolute.txt
